<resources>
    <string name="app_name">GeofenceApp</string>

    <string name="get_location">Get marker location</string>
    <string name="set_wifi">Set wifi spot</string>
    <string name="set_geofence">Set geofence</string>
    <string name="geofences_set">Geofences set</string>

    <string name="geofence_lat">Latitude</string>
    <string name="geofence_lon">Longitude</string>
    <string name="geofence_radius">Radius (metres)</string>
    <string name="wifi_name">Geofence: %1$s</string>

    <string name="geofence_inside">Inside</string>
    <string name="geofence_outside">Outside</string>

    <string name="field_is_empty">This field can\'t be empty</string>
    <string name="google_play_services_error">Google Play Services error</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d</string>

    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality</string>
    <string name="settings">Settings</string>
</resources>
