<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/set_wifi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/wifi_fab_bg"
        android:src="@drawable/ic_network_wifi_white_24dp"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/shadow_view"
        app:layout_constraintLeft_toLeftOf="@+id/menu_button"
        app:layout_constraintRight_toRightOf="@+id/menu_button"
        app:layout_constraintTop_toTopOf="@+id/shadow_view"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="UnusedAttribute"
        tools:translationY="@dimen/wifi_fab_transition_height"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/set_geofence_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/colorPrimaryLight"
        android:src="@drawable/ic_geofence_white_24px"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/shadow_view"
        app:layout_constraintLeft_toLeftOf="@+id/menu_button"
        app:layout_constraintRight_toRightOf="@+id/menu_button"
        app:layout_constraintTop_toTopOf="@+id/shadow_view"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="UnusedAttribute"
        tools:translationY="@dimen/geofence_fab_transition_height"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/get_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/colorAccentDark"
        android:src="@drawable/ic_edit_location_white_24dp"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/shadow_view"
        app:layout_constraintLeft_toLeftOf="@+id/menu_button"
        app:layout_constraintRight_toRightOf="@+id/menu_button"
        app:layout_constraintTop_toTopOf="@+id/shadow_view"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="UnusedAttribute"
        tools:translationY="@dimen/location_fab_transition_height"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_touch_app_white_48dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/shadow_view"
        app:layout_constraintRight_toRightOf="@+id/shadow_view"
        app:layout_constraintTop_toTopOf="@+id/shadow_view"
        app:layout_constraintVertical_bias="0.5"/>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/geofence_status_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/shadow_view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/drop_shadow_reverse"
        app:layout_constraintBottom_toTopOf="@+id/geofence_status_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/geofence_status_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/outside"
        android:gravity="center"
        android:text="@string/geofence_outside"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wifi_name_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/wifi_name_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:textSize="16sp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/latitude_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Wi-Fi Spot"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/latitude_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_field_box"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/longitude_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/latitude_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/geofence_lat"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/longitude_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_field_box"
        android:paddingTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/radius_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/longitude_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/geofence_lon"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/radius_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_field_box"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/radius_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/geofence_radius"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/get_location_hint_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_hint_margin"
        android:layout_marginRight="@dimen/fab_hint_margin"
        android:alpha="0.0"
        android:background="@color/hint_view_bg"
        android:padding="@dimen/fab_hint_padding"
        android:text="@string/get_location"
        android:textAllCaps="true"
        android:textSize="@dimen/fab_hint_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/get_location_button"
        app:layout_constraintRight_toLeftOf="@+id/get_location_button"
        app:layout_constraintTop_toTopOf="@+id/get_location_button"
        tools:alpha="1.0"
        tools:translationY="@dimen/location_fab_transition_height"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/set_geofence_hint_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_hint_margin"
        android:layout_marginRight="@dimen/fab_hint_margin"
        android:alpha="0.0"
        android:background="@color/hint_view_bg"
        android:padding="@dimen/fab_hint_padding"
        android:text="@string/set_geofence"
        android:textAllCaps="true"
        android:textSize="@dimen/fab_hint_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/set_geofence_button"
        app:layout_constraintRight_toLeftOf="@+id/set_geofence_button"
        app:layout_constraintTop_toTopOf="@+id/set_geofence_button"
        tools:alpha="1.0"
        tools:translationY="@dimen/geofence_fab_transition_height"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/set_wifi_hint_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_hint_margin"
        android:layout_marginRight="@dimen/fab_hint_margin"
        android:alpha="0.0"
        android:background="@color/hint_view_bg"
        android:padding="@dimen/fab_hint_padding"
        android:text="@string/set_wifi"
        android:textAllCaps="true"
        android:textSize="@dimen/fab_hint_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/set_wifi_button"
        app:layout_constraintRight_toLeftOf="@+id/set_wifi_button"
        app:layout_constraintTop_toTopOf="@+id/set_wifi_button"
        tools:alpha="1.0"
        tools:translationY="@dimen/wifi_fab_transition_height"
        tools:visibility="visible"/>

</android.support.constraint.ConstraintLayout>
